# chef-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  test_agent_creation.py  test_mcp_client.py
adapters/db/: __init__.py  database.py  migrations.py  recipe_repository.py  shopping_list_repository.py
adapters/i18n/: __init__.py  translations.py  translator.py
adapters/llm/: __init__.py  base.py  factory.py  groq_adapter.py  openai_adapter.py
adapters/mcp/: __init__.py  __main__.py  client.py  http_client.py  http_server.py  server.py
agent/: __init__.py  graph.py  memory.py  models.py  simple_memory.py  tools.py
api/: __init__.py  chat.py  health.py  limiter.py  middleware.py  models.py  recipes.py  shopping.py
data/: recipes.json  recipes_sample.json
domain/: __init__.py  entities.py  ingredient_categorizer.py  meal_plan_generator.py  repo_abc.py
migrations/: 0001_initial_schema.sql  0002_fix_diet_type_values.sql
prompts/: __init__.py  loader.py  system_prompts.json
scripts/: check_all.py  db_inspector.py  ingest_recipes.py  init_db.py  migrate.py  run_mcp_server.py  test_runner.py
tests/: base_test.py  conftest.py  database_repositories.py  test_additional_critical_bugs.py  test_agent.py  test_agent_api_integration.py  test_agent_call_chain.py  test_agent_real_processing.py  test_agent_state_flow.py  test_agent_step_by_step.py  test_api.py  test_bug_fixes.py  test_comprehensive.py  test_concurrent_access.py  test_concurrent_access_real_db.py  test_critical_bug_fixes.py  test_diet_extraction_direct.py  test_diet_type_validation.py  test_domain_entities.py  test_endpoint_coverage.py  test_failure_scenarios.py  test_gzip_error_handling.py  test_i18n.py  test_ingredient_categorizer.py  test_integration.py  test_invalid_days_handling.py  test_json_error_handling.py  test_llm_adapters.py  test_llm_error_handling.py  test_main.py  test_mcp_client.py  test_mcp_server.py  test_meal_plan_generator.py  test_module_imports.py  test_performance.py  test_race_condition_fix.py  test_recipe_api.py  test_security.py  test_server_startup.py  test_shopping_api.py  (+2 more)
use_cases/: __init__.py
