[tool.poetry]
name = "chef-agent"
version = "0.1.0"
description = "A FastAPI-based web service for chef management and operations"
authors = ["EugeneAZDev <eugene.zolotkov@gmail.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.118.0,<0.119.0"
uvicorn = {extras = ["standard"], version = ">=0.37.0,<0.38.0"}
httpx = ">=0.27.0,<0.28.0"

# AI and LangChain packages
langchain = ">=0.3.0,<0.4.0"
langgraph = ">=0.2.0,<0.3.0"
langchain-groq = ">=0.2.0,<0.3.0"
langchain-community = ">=0.3.0,<0.4.0"
langchain-core = ">=0.3.0,<0.4.0"

# MCP (Model Context Protocol)
mcp = ">=1.0.0,<2.0.0"

# Data handling
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"

# Security
slowapi = ">=0.1.9,<0.2.0"
python-multipart = ">=0.0.6,<0.1.0"
redis = ">=5.0.0,<6.0.0"

# Utilities
python-dotenv = ">=1.0.0,<2.0.0"
instructor = ">=1.0.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=0.23.0,<0.24.0"
black = ">=24.0.0,<25.0.0"
flake8 = ">=7.0.0,<8.0.0"
isort = ">=5.13.0,<6.0.0"
pre-commit = ">=3.6.0,<4.0.0"


[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000"
