[tool.poetry]
name = "chef-agent"
version = "0.1.0"
description = "A FastAPI-based web service for chef management and operations"
authors = ["EugeneAZDev <eugene.zolotkov@gmail.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.118.0,<0.119.0"
uvicorn = {extras = ["standard"], version = ">=0.37.0,<0.38.0"}
httpx = ">=0.27.0,<0.28.0"

# AI and LangChain packages
langchain = ">=0.3.0,<0.4.0"
langgraph = ">=0.2.0,<0.3.0"
langchain-groq = ">=0.2.0,<0.3.0"
langchain-community = ">=0.3.0,<0.4.0"
langchain-core = ">=0.3.0,<0.4.0"

# MCP (Model Context Protocol)
mcp = { git = "https://github.com/modelcontextprotocol/python-sdk.git", tag = "v1.16.0" }

# Data handling
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"

# Security
slowapi = ">=0.1.9,<0.2.0"
python-multipart = ">=0.0.6,<0.1.0"
redis = ">=5.0.0,<6.0.0"

# Utilities
python-dotenv = ">=1.0.0,<2.0.0"
instructor = ">=1.0.0,<2.0.0"
psutil = ">=5.9.0,<6.0.0"
langgraph-checkpoint-sqlite = "^2.0.11"
langchain-openai = "^0.3.35"
fastapi-limiter = "^0.1.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=0.23.0,<0.24.0"
black = ">=24.0.0,<25.0.0"
flake8 = ">=7.0.0,<8.0.0"
isort = ">=5.13.0,<6.0.0"
pre-commit = ">=3.6.0,<4.0.0"


[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8070"

[tool.black]
line-length = 79
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
